# python-data-prep-whu

./: .gitignore  README.html  README.md  checklist-data-loading.md  pyproject.toml  setup-instructions.md  setup-uv-windows-admin.md  setup-uv-windows-no-admin.md  tutorial-project-setup.md
notebooks/Data Preparation with Python/: 01 - Getting started with pandas - Exercises.ipynb  01 - Getting started with pandas.ipynb  02 - Modifying DataFrames - Exercises.ipynb  02 - Modifying DataFrames.ipynb  03 - Aggregations and other groupwise operations - Exercises.ipynb  03 - Aggregations and other groupwise operations.ipynb  04 - Pivoting, Reshaping - Exercises.ipynb  04 - Pivoting, Reshaping.ipynb  05 - Combining datasets - Exercises.ipynb  05 - Combining datasets.ipynb  06 - Handling missing values - Exercises.ipynb  06 - Handling missing values.ipynb  07 - Time Series Operations - Exercises.ipynb  07 - Time Series Operations.ipynb  08 - Data type conversions - Exercises.ipynb  08 - Data type conversions.ipynb  09 - Special data preprocessing operations for machine learning - Exercises.ipynb  09 - Special data preprocessing operations for machine learning.ipynb
